# SailBotTechnicalQuiz

./: CMakeLists.txt  README.md  StandardCalc.cpp  StandardCalc.h  main.cpp  sailbot_git_questions.txt
lib/googletest-master/googlemock/scripts/: fuse_gmock_files.py
lib/googletest-master/googletest/: README.md
lib/googletest-master/googletest/scripts/: fuse_gtest_files.py
tests/: CMakeLists.txt  StandardCalc.cpp  StandardCalc.h  StandardCalcTests.cpp  test.cpp
tests/lib/googletest-master/googlemock/include/gmock/: gmock-spec-builders.h
tests/lib/googletest-master/googletest/samples/: sample1_unittest.cc
tests/q1_tests/: CMakeLists.txt  StandardCalcTest.cpp
